# ASP.NETCore

./: .env.example  .eslintrc.js  .gitignore  .slugignore  ASP.NETCore.sln  CSP_README.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_README.md  DEPLOY_GITHUB_ACTIONS.md  DEPLOY_RAPIDO.md  Dockerfile  Dockerfile.Railway  GITHUB_MCP_INTEGRATION_GUIDE.md  INTEGRATION_GUIDE.md  INTERFACE_README.md  Procfile  Program.Railway.cs  RAILWAY_README.md  README.md  RESUMO_FINAL.md  SOLUCAO-GRATUITA-ONLINE.md  STATUS.md  app.json  architecture.md  dashboard.html  deploy-railway.sh  docker-compose.yml  health-check.sh  index.html  ler.md  ngrok.yml  package-lock.json  package.json  pyproject.toml  railway.toml  setup-heroku-github.sh  test-fallback.sh  tsconfig.base.json  tsconfig.json  turbo.json
AiAbstractionApp/: AiAbstractionApp.csproj  AiAbstractionApp.http  Program.cs
ApiGateway/: ApiGateway.http  DEPLOYMENT_INTEGRATION.md  Program.cs  README.md  appsettings.Development.json  appsettings.json
docs/: AGENT_TASK_SYSTEM.md  LEARNING_PATH_MANAGEMENT.md  LLAMAINDEX_SETUP.md  NEW_FUNCTIONALITIES_SUMMARY.md  REDIS_SETUP.md  deployment.md
dotnet-backend/: Program.cs  README.md  TutorCopiloto.csproj  appsettings.Development.json  appsettings.json  test_deploy.sh  test_deploy_fixed.sh
python-integration/: .env.example  README.md  docker-compose.yml  run-integration.sh  start-integration.sh
scripts/: demo.sh  dev-setup.sh  init-local-cluster.sh  setup-secrets.sh  start-deployment-server.sh  start-local-dev.sh  test-health.sh  test-redis.sh
web-spa/: index.html  package-lock.json  (+2 more)
(+179 files in other folders)
